modifcations to inference data range

--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -26,6 +26,7 @@ This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF 
 
 ```{code-cell} ipython3
 import numpy as np
+rng = np.random.default_rng()
 import matplotlib.pyplot as plt
 from scipy import optimize
 from datetime import datetime
@@ -66,7 +67,7 @@ AA_collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
 # function for Average Atom collision freq
-true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
+AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
 
@@ -77,7 +78,7 @@ electrons = ElectronGas(t, d, dos_fn, cp)
 dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -216,19 +217,21 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - model data - rel. residual - 4 params - adaptive KK"
+dataset = "relative residual"
 ```
 
 ```{code-cell} ipython3
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using collision freq model
-        fit to average atom data from file {datafile}. Uses adaptive
-        Kramers-Kronig transform for imaginary part of collisoin freq.""",
+    "input data info" : f"""Data generated using Average Atom 
+         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
+         factors, LB form, inelastic processes], from file {datafile}. Uses adaptive
+         Kramers-Kronig transform for imaginary part of collision freq.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision freq model" : "collision_activate_decay, 4 parameters",
+    "frequency grid [eV]" : freq_data,
+    "collision freq model" : "collision_activate_decay, 4 parameter",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "residual" : "relative",
     "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
@@ -236,17 +239,16 @@ runinfo = {
 
 # sampler properties
 ndim = 4 # number of parameters
-numchains = 32
-numsamples = 15_000
+numchains = 8
+numsamples = 10_000
 ```
 
 ```{code-cell} ipython3
 # randomly initialize chains within the boundaries
-rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
 ```
 
 ```{code-cell} ipython3
@@ -318,7 +320,7 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(
+    plt.semilogx(
         freq_data, 
         collisionfreq(freq_data / AtomicUnits.energy, sample), 
         "C1", 
@@ -381,8 +383,12 @@ plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.xlim(0, 100)
+plt.xlim(0, 60)
 plt.legend()
+```
+
+```{code-cell} ipython3
+
 ```
 
 ```{code-cell} ipython3
