--- a/notebooks/exploratory/5.11-twh-inference-model-data-absres.md
+++ b/notebooks/exploratory/5.11-twh-inference-model-data-absres.md
@@ -14,7 +14,7 @@ kernelspec:
 
 # Bayesian Inference with Markov Chain Monte Carlo: Ideal Dataset
 
-This notebook is roughly identical with `5.1-twh-....ipynb` except that we use the absolute residual.
+This notebook is roughly identical with `5.0-twh-....ipynb` except that the ELF data for this notebook is generated from our collision model _fit to Average Atom collision frequency data_. In other words, the collision frequency we are trying to find is exactly representable by our model, so we are testing the limits of the inversion process.
 
 ```{code-cell} ipython3
 # Load the "autoreload" extension so that code can change
@@ -26,6 +26,7 @@ This notebook is roughly identical with `5.1-twh-....ipynb` except that we use t
 
 ```{code-cell} ipython3
 import numpy as np
+rng = np.random.default_rng()
 import matplotlib.pyplot as plt
 from scipy import optimize
 from datetime import datetime
@@ -51,11 +52,6 @@ datafile = "../../data/external/Al-1 _vwf.txt"
 # temperature
 teV = 1
 t = teV / AtomicUnits.energy
-datafile = "../../data/external/Al-1 _vwf.txt"
-# just copying from the data file
-# temperature
-teV = 1
-t = teV / AtomicUnits.energy
 
 # density
 d_ang = 0.18071 # 1/[angstroms]**3
@@ -71,7 +67,7 @@ AA_collfreq_data = datadump[1] + 1j * datadump[2]
 dos_data = datadump[3]
 
 # function for Average Atom collision freq
-true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
+AA_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
 # function for DOS ratio
 dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
 
@@ -82,35 +78,7 @@ electrons = ElectronGas(t, d, dos_fn, cp)
 dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
-# Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 1.55 # 1/[angstrom]
-# density
-d_ang = 0.18071 # 1/[angstroms]**3
-d = d_ang * AtomicUnits.length**3
-
-# chemical potential
-cp = 0.3212 # [at u]
-
-datadump = np.loadtxt(datafile, skiprows=9, usecols=[0, 5, 6, 9], unpack=True)
-orig_freq_data = datadump[0] # [eV]
-print(f"length of original data = {len(orig_freq_data)}")
-AA_collfreq_data = datadump[1] + 1j * datadump[2]
-dos_data = datadump[3]
-
-# function for Average Atom collision freq
-true_collfreq_fn = lambda x : np.interp(x, orig_freq_data / AtomicUnits.energy, AA_collfreq_data)
-# function for DOS ratio
-dos_fn = lambda x : np.interp(x, np.sqrt(2 * orig_freq_data / AtomicUnits.energy), dos_data)
-
-# electron data
-electrons = ElectronGas(t, d, dos_fn, cp)
-
-# dielectric function
-dielectric = Mermin(electrons)
-
-# create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -139,7 +107,7 @@ def elfmodel(freq, params):
         wavenum * AtomicUnits.length,
         freq,
         lambda x: collisionfreq(x, params)
-    )
+        )
 ```
 
 ## Fit our collision frequency model to AA collision frequency data
@@ -168,11 +136,11 @@ plt.ylabel("collision freq [au]")
 plt.legend()
 ```
 
-### Create ELF data with our collision frequency  model using parameters fit to mimic the average atom collision frequency data
+### Create ELF data with our collision frequency  model using the optimized parameters fit to mimic the average-atom collision frequency data
 
 ```{code-cell} ipython3
 # true ELF data
-elf_data = elfmodel(freq_data / AtomicUnits.energy, popt_AAcoll)
+elf_data = elfmodel(freq_data / AtomicUnits.energy, popt_AAcoll) + 0.02 * rng.standard_normal(freq_data.shape)
 print(f"shape of ELF data = {elf_data.shape}")
 ```
 
@@ -218,22 +186,12 @@ plt.ylim(1e-6)
 plt.legend()
 ```
 
-```{code-cell} ipython3
-plt.plot(freq_data, elf_data, c="C3", label="true")
-opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
-plt.plot(freq_data, opt_elf, c="C0", ls='-.', label="opt.")
-plt.ylabel("ELF [au]")
-plt.xlabel(r"$\hbar \omega$ [eV]")
-plt.xlim(0, 100)
-plt.legend()
-```
-
 # Perform MCMC
 
 Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
-lik_cutoff = 0.03
+lik_cutoff = 0.02
 prior_lims = [
     [0, 5],
     [0, 5],
@@ -259,37 +217,39 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - model data - abs. residual"
+dataset = "absolute residual - noise"
 ```
 
 ```{code-cell} ipython3
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using collision freq model
-        fit to average atom data from file {datafile}. Uses adaptive
-        Kramers-Kronig transform for imaginary part of collisoin freq.""",
+    "input data info" : f"""Data generated using Average Atom 
+         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
+         factors, LB form, inelastic processes], from file {datafile}. Uses adaptive
+         Kramers-Kronig transform for imaginary part of collision freq.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
-    "collision freq model" : "collision_activate_decay, 4 parameters",
+    "frequency grid [eV]" : freq_data,
+    "collision freq model" : "collision_activate_decay, 4 parameter",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
-    "residual" : "abs",
-    "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})"
+    "residual" : "absolute",
+    "prior distribution function" : f"Uniform distribution with boundaries ({prior_lims})",
+    "noise level" : 0.02
 }
 
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 10_000
+numsamples = 4_000
 ```
 
 ```{code-cell} ipython3
 # randomly initialize chains within the boundaries
-rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
 ```
 
 ```{code-cell} ipython3
@@ -361,7 +321,7 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(
+    plt.semilogx(
         freq_data, 
         collisionfreq(freq_data / AtomicUnits.energy, sample), 
         "C1", 
@@ -380,7 +340,7 @@ plt.plot(
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-plt.ylim(1e-3)
+# plt.ylim(1e-3)
 plt.legend()
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
@@ -390,7 +350,6 @@ plt.legend()
 This uses the same random samples from the above plot.
 
 ```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
@@ -401,7 +360,7 @@ for ind in inds:
         alpha=0.1
     )
 # plot data
-plt.loglog(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
+plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
@@ -411,6 +370,7 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
+eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
@@ -420,13 +380,12 @@ for ind in inds:
         "C1", 
         alpha=0.1
     )
-    
 # plot data
 plt.plot(freq_data, elf_data, c="k", label="true ELF", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.xlim(0, 100)
+plt.xlim(0, 60)
 plt.legend()
 ```
 
