--- a/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
+++ b/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
@@ -76,10 +76,16 @@ electrons = ElectronGas(t, d, dos_fn, cp)
 # dielectric function
 dielectric = Mermin(electrons)
 
-# create a new, truncated frequency grid
-freq_data = np.linspace(2, 45, 99) # [eV]
+# frequency grid to match previous notebooks
+freq_data_full = np.geomspace(1e-1, 1e3, 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
+```
+
+Truncate the frequency grid (which is the same as the previous notebooks) to have points between 2 eV and 45 eV. By using the same points in this range as previous notebooks, we are removing discrepencies based on grid choices and focusing on effects in the inference results due to truncating the range.
+
+```{code-cell} ipython3
+freq_data = freq_data_full[(2 < freq_data_full) & (freq_data_full < 45)]
 ```
 
 # Define collision frequency model
@@ -123,7 +129,7 @@ popt_AAcoll, pcov = optimize.curve_fit(
     (1,1,1,1),
     bounds=(0, np.inf)
 )
-print(popt_AAcoll)
+print(f"optimized paramters = {popt_AAcoll}")
 
 # plot to compare
 plt.plot(freq_data, (AAcoll := AA_collfreq_fn(freq_data / AtomicUnits.energy)).real, c="C3", label="AA")
@@ -189,7 +195,7 @@ plt.legend()
 Define a (log) posterior distribution that only depends on the parameters of the collision frequency model
 
 ```{code-cell} ipython3
-lik_cutoff = 0.03
+lik_cutoff = 0.05
 prior_lims = [
     [0, 5],
     [0, 5],
@@ -215,7 +221,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "mcmc samples - truncated model data - rel. residual"
+dataset = "truncated grid"
 ```
 
 ```{code-cell} ipython3
@@ -227,6 +233,7 @@ runinfo = {
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
+    "frequency grid [eV]" : freq_data,
     "collision freq model" : "collision_activate_decay, 4 parameters",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "residual" : "relative",
@@ -236,7 +243,7 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 30_000
+numsamples = 2_000
 ```
 
 ```{code-cell} ipython3
@@ -245,7 +252,7 @@ rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
 ```
 
 # Read in MCMC data
@@ -331,16 +338,15 @@ plt.legend()
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
-Let's use the same parameters but just extend the range of the plot to see the behavior away from the data.
+Let's use the same parameters but use the full frequence range to see the behavior away from the data.
 
 ```{code-cell} ipython3
 # extend the range of the collision frequency
-freq_ext = np.geomspace(1e-2, 1e3, 200)
 for ind in inds:
     sample = flat_samples[ind]
     plt.semilogx(
-        freq_ext, 
-        collisionfreq(freq_ext / AtomicUnits.energy, sample), 
+        freq_data_full, 
+        collisionfreq(freq_data_full / AtomicUnits.energy, sample), 
         "C1", 
         alpha=0.1
     )
