--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -26,6 +26,7 @@ So far, the analysis notebooks have examined inverting the ELF have used non-lin
 
 ```{code-cell} ipython3
 import numpy as np
+rng = np.random.default_rng()
 import matplotlib.pyplot as plt
 from scipy import optimize
 import emcee
@@ -77,7 +78,7 @@ electrons = ElectronGas(t, d, dos_fn, cp)
 dielectric = Mermin(electrons)
 
 # create a new, more regular frequency grid that what exists in the data file
-freq_data = np.geomspace(orig_freq_data[0], orig_freq_data[-1], 99) # [eV]
+freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
 wavenum = 1.55 # 1/[angstrom]
 ```
@@ -208,7 +209,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_AAdata"
-dataset = "mcmc samples - model data - rel. residual - 4 params - adaptive KK"
+dataset = "relative residual"
 ```
 
 ```{code-cell} ipython3
@@ -221,6 +222,7 @@ runinfo = {
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
+    "frequency grid [eV]" : freq_data,
     "collision freq model" : "collision_activate_decay, 4 parameter",
     "likelihood function" : f"Soft (expenonential) cutoff with a cutoff value of {lik_cutoff}",
     "residual" : "relative",
@@ -229,17 +231,16 @@ runinfo = {
 
 # sampler properties
 ndim = 4 # number of parameters
-numchains = 32
-numsamples = 15_000
+numchains = 8
+numsamples = 5_000
 ```
 
 ```{code-cell} ipython3
 # randomly initialize chains within the boundaries
-rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
-# uncomment to run and potentially overwrite data
-# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+# uncomment to run
+# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
 ```
 
 # Read in MCMC data
@@ -302,7 +303,7 @@ inds = rng.integers(len(flat_samples), size=100)
 # plot collision function for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
-    plt.loglog(
+    plt.semilogx(
         freq_data, 
         collisionfreq(freq_data / AtomicUnits.energy, sample), 
         "C1", 
@@ -364,7 +365,7 @@ plt.plot(freq_data, elf_data, c="k", label="Avg. Atom", lw=2, ls='--')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.xlim(0, 100)
+plt.xlim(0, 60)
 plt.legend()
 ```
 
