refactor notebooks using the residual function

--- a/notebooks/exploratory/5.11-twh-inference-model-data-absres.md
+++ b/notebooks/exploratory/5.11-twh-inference-model-data-absres.md
@@ -249,7 +249,7 @@ numsamples = 4_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 ```{code-cell} ipython3
