--- a/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
+++ b/notebooks/exploratory/5.3-twh-inference-reducedrange-model-data.md
@@ -157,7 +157,7 @@ Do a least squares fit of the ELF model to the ELF data by varying the parameter
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="rel"
     )
 
 # initial parameter guesses (this turns out to be important in here!)
@@ -209,7 +209,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualtype="rel"
+    residualweight="rel"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -252,7 +252,7 @@ rng = np.random.default_rng()
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 # Read in MCMC data
