--- a/notebooks/exploratory/5.4-twh-inference-two-wavenums.md
+++ b/notebooks/exploratory/5.4-twh-inference-two-wavenums.md
@@ -110,20 +110,13 @@ def elfmodel(freq, params):
     )
 ```
 
-## Fit our collision frequency model to AA collision frequency data
+## Collision frequency parameters that mimic average atom data
 
-Note that we are only fitting to the real part of the data.
-The imaginary part is found from the Kramers-Kronig transformation.
+Taken from other notebooks.
 
 ```{code-cell} ipython3
 # fit to data
-popt_AAcoll, pcov = optimize.curve_fit(
-    collision_activate_decay, 
-    freq_data / AtomicUnits.energy,
-    AA_collfreq_fn(freq_data / AtomicUnits.energy).real,
-    (1,1,1,1),
-    bounds=(0, np.inf)
-)
+popt_AAcoll = np.asarray([0.48647414, 0.06293753, 0.27164363, 8.66461154])
 print(popt_AAcoll)
 
 # plot to compare
@@ -152,7 +145,7 @@ Do a least squares fit of the ELF model to the ELF data by varying the parameter
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="rel"
     )
 
 # initial parameter guesses
@@ -207,7 +200,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualtype="rel"
+    residualweight="rel"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -250,7 +243,7 @@ numsamples = 5_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 ```{code-cell} ipython3
