--- a/notebooks/exploratory/5.41-twh-inference-two-wavenums-absres.md
+++ b/notebooks/exploratory/5.41-twh-inference-two-wavenums-absres.md
@@ -145,7 +145,7 @@ Do a least squares fit of the ELF model to the ELF data by varying the parameter
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="abs"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="abs"
     )
 
 # initial parameter guesses
@@ -200,7 +200,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualtype="abs"
+    residualweight="abs"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -243,7 +243,7 @@ numsamples = 1_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 ```{code-cell} ipython3
