--- a/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
+++ b/notebooks/exploratory/5.0-twh-inference-AAcollisions.md
@@ -142,7 +142,7 @@ Then, do a least squares fit of the ELF model to the ELF data by varying the par
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="rel"
     )
 
 # initial parameter guesses
@@ -197,7 +197,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualtype="rel"
+    residualweight="rel"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -240,7 +240,7 @@ numsamples = 5_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run
-# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=False)
+# sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 # Read in MCMC data
