--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -152,7 +152,7 @@ Do a least squares fit of the ELF model to the ELF data by varying the parameter
 # setup
 def residual(params):
     return prob.residual(
-        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, type="rel"
+        elfmodel, freq_data / AtomicUnits.energy, elf_data, params, weight="rel"
     )
 
 # initial parameter guesses
@@ -205,7 +205,7 @@ loglikelihood = prob.SoftCutoffLogLikelihood(
     freq_data / AtomicUnits.energy,
     elfmodel,
     lik_cutoff,
-    residualtype="rel"
+    residualweight="rel"
 )
 logposterior = prob.LogPosterior(logprior, loglikelihood)
 logposterior(optresult.x)
@@ -248,7 +248,7 @@ numsamples = 10_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, overwrite=True)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=True)
 ```
 
 ```{code-cell} ipython3
