Tests for integrated objective function
Instead of summing over the residual, how does integrating over the residual affect the results when using different grids.

--- a/notebooks/exploratory/4.11-twh-optimize-grid-choice.md
+++ b/notebooks/exploratory/4.11-twh-optimize-grid-choice.md
@@ -117,7 +117,7 @@ def gridtest(freq_grid):
     
     def residual(params):
         return prob.residual(
-            elfmodel, freq_grid / AtomicUnits.energy, elf_data, params, type="rel"
+            elfmodel, freq_grid / AtomicUnits.energy, elf_data, params, weight= "rel"
         )
 
     # initial parameter guesses
@@ -148,6 +148,7 @@ def gridtest(freq_grid):
     ax[1].set_ylabel("ELF [au]")
     ax[1].set_xlabel(r"$\hbar \omega$ [eV]")
     ax[1].set_xlim(0, 50)
+    print(f"optimized parameters: {optresult.x}")
 ```
 
 # Log grid
@@ -169,4 +170,81 @@ gridtest(lineargrid)
 ```{code-cell} ipython3
 nonuniformgrid = np.concatenate((np.linspace(1e-1, 1, 5, endpoint=False), np.linspace(1, 50, 75, endpoint=False), np.geomspace(50, 1e3, 20)))
 gridtest(nonuniformgrid)
+```
+
+# Objective function that integrates the residual
+
+In the optimizations above, we solve the least squares problem by minimizing the objective function
+
+$$ \min_\theta \|(y - f(x; \theta))/y \|^2_2 = \min_\theta \sum_i (y_i - f(x_i; \theta))^2/y_i^2$$
+
+Instead, what if we use an objective function that _integrates_ instead of sums over the function values:
+
+$$ \min_\theta \int (y(x) - f(x; \theta))^2/y(x)^2 dx \approx \min_\theta \sum_i (y_i - f(x_i; \theta))^2/y_i^2 \Delta x_i $$
+
+This might help alleviate descrepencies between grid type because the difference between points $\Delta x_i$ is taken into account. The catch is that we can't use `least_squares` optimization and have to resort to general purpose optimizers.
+
+```{code-cell} ipython3
+def gridtest2(freq_grid):
+    elf_data = elec_loss_fn(
+        dielectric,
+        wavenum * AtomicUnits.length,
+        freq_grid / AtomicUnits.energy,
+        true_collfreq_fn
+    )
+    
+    def objective(params):
+        res = prob.residual(
+            elfmodel, freq_grid / AtomicUnits.energy, elf_data, params, weight= "rel"
+        )
+        return np.trapz(res**2, x=freq_grid)
+
+    # initial parameter guesses
+    initparams = (1, 1, 1, 1)
+    
+    # optimization results
+    optresult = optimize.minimize(objective, initparams, bounds=optimize.Bounds(1e-6, np.inf), options={"maxiter": 100})
+
+    # Plot collision frequency
+    fig, ax = plt.subplots(2, 1, figsize=(6, 8))
+    # original
+    ax[0].semilogx(freq_grid, true_collfreq_fn(freq_grid / AtomicUnits.energy).real, c="C3", label="Avg. Atom")
+    ax[0].plot(freq_grid, true_collfreq_fn(freq_grid / AtomicUnits.energy).imag, c="C3", ls="--")
+    # optimized
+    ax[0].plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, optresult.x).real, c="C0", label="opt.")
+    ax[0].plot(freq_grid, collisionfreq(freq_grid / AtomicUnits.energy, optresult.x).imag, c="C0", ls="--")
+    ax[0].plot(freq_grid, np.zeros_like(freq_grid), 'k.')
+    ax[0].set_xlabel(r"$\hbar\omega$ [eV]")
+    ax[0].set_ylabel("collision freq [au]")
+    ax[0].legend()
+
+    # plot ELF
+    ax[1].plot(freq_grid, elf_data, c="C3", label="Avg. Atom")
+    # ELF with optimized collision frequency
+    opt_elf = elfmodel(freq_grid / AtomicUnits.energy, optresult.x)
+    ax[1].plot(freq_grid, opt_elf, c="C0", ls='-.', label="opt.")
+    ax[1].plot(freq_grid, np.zeros_like(freq_grid), 'k.')
+    ax[1].set_ylabel("ELF [au]")
+    ax[1].set_xlabel(r"$\hbar \omega$ [eV]")
+    ax[1].set_xlim(0, 50)
+    print(f"optimized parameters: {optresult.x}")
+```
+
+```{code-cell} ipython3
+loggrid = np.geomspace(1e-1, 1e3, 300) # [eV]
+gridtest2(loggrid)
+```
+
+```{code-cell} ipython3
+lineargrid = np.linspace(1e-1, 1e3, 1000)
+gridtest2(lineargrid)
+```
+
+```{code-cell} ipython3
+nonuniformgrid = np.concatenate((np.linspace(1e-1, 1, 5, endpoint=False), np.linspace(1, 50, 75, endpoint=False), np.geomspace(50, 1e3, 20)))
+gridtest2(nonuniformgrid)
+```
+
+```{code-cell} ipython3
+
 ```
