Rerun two angle inference nb's with slightly different parameters

--- a/notebooks/exploratory/5.4-twh-inference-two-wavenums.md
+++ b/notebooks/exploratory/5.4-twh-inference-two-wavenums.md
@@ -170,11 +170,13 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data[0], label="true: q1", color="C3")
-plt.loglog(freq_data, elf_data[1], label="true: q2", color="C1")
+plt.loglog(freq_data, elf_data[0], label="true: q1", color="C3", lw=3)
+plt.loglog(freq_data, elf_data[1], label="true: q2", color="C1", lw=3)
+plt.loglog(freq_data, elf_data[0], color="C3", lw=1)
+plt.loglog(freq_data, elf_data[1], color="C1", lw=1)
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
-plt.plot(freq_data, opt_elf[0], ls='-.', label="opt.: q1", color="C0")
-plt.plot(freq_data, opt_elf[1], ls='-.', label="opt.: q2", color="C2")
+plt.plot(freq_data, opt_elf[0], ls='', label="opt.: q1", color="C0", marker="+", markevery=5)
+plt.plot(freq_data, opt_elf[1], ls='', label="opt.: q2", color="C2", marker="+", markevery=5)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar \omega$ [eV]")
 plt.ylim(1e-6)
@@ -235,7 +237,7 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 5_000
+numsamples = 500
 ```
 
 ```{code-cell} ipython3
