--- a/notebooks/exploratory/5.5-twh-inference-two-wavenums-truncated-ranges.md
+++ b/notebooks/exploratory/5.5-twh-inference-two-wavenums-truncated-ranges.md
@@ -135,7 +135,7 @@ elf_data = elfmodel(freq_data / AtomicUnits.energy, popt_AAcoll)
 # mask = np.array([(2 < freq_data) & (freq_data < 45), 
 #                  (30 < freq_data) & (freq_data < 120)],
 #                 dtype = int)
-mask = elf_data > 3e-2
+mask = elf_data > 1e-2
 plt.plot(freq_data, elf_data[0], lw=3, label="data (q1)")
 plt.plot(freq_data, elf_data[1], lw=3, label="data (q2)")
 plt.plot(freq_data, (mask * elf_data).T, color="black", lw=1)
@@ -224,7 +224,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_twoangle"
-dataset = "masked relative residual"
+dataset = "masked relative residual - mask 2"
 ```
 
 ```{code-cell} ipython3
@@ -246,7 +246,7 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 1_500
+numsamples = 1_000
 ```
 
 ```{code-cell} ipython3
