small refactor/updates

--- a/notebooks/exploratory/5.1-twh-inference-model-data.md
+++ b/notebooks/exploratory/5.1-twh-inference-model-data.md
@@ -217,16 +217,14 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_modeldata"
-dataset = "relative residual"
+dataset = f"relative residual - q = {wavenum}"
 ```
 
 ```{code-cell} ipython3
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using Average Atom 
-         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
-         factors, LB form, inelastic processes], from file {datafile}. Uses adaptive
-         Kramers-Kronig transform for imaginary part of collision freq.""",
+    "input data info" : f"""Data generated using collision frequency model fit
+        to average-atom data.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
@@ -240,7 +238,7 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 10_000
+numsamples = 5_000
 ```
 
 ```{code-cell} ipython3
@@ -248,7 +246,7 @@ numsamples = 10_000
 initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=True)
+sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
 ```
 
 ```{code-cell} ipython3
@@ -368,7 +366,6 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-eps = Mermin(ElectronGas(t, d, dos_fn))
 # plot ELF for different parameters from MCMC sampling
 for ind in inds:
     sample = flat_samples[ind]
@@ -385,10 +382,6 @@ plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.xlim(0, 60)
 plt.legend()
-```
-
-```{code-cell} ipython3
-
 ```
 
 ```{code-cell} ipython3
