--- a/notebooks/exploratory/5.4-twh-inference-two-wavenums.md
+++ b/notebooks/exploratory/5.4-twh-inference-two-wavenums.md
@@ -80,7 +80,7 @@ dielectric = Mermin(electrons)
 # create a new, more regular frequency grid that what exists in the data file
 freq_data = np.geomspace(1e-1, 1e3, 200) # [eV]
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = np.asarray([1.55,  4.39]) # 1/[angstrom]
+wavenum = np.asarray([1.55,  2.19]) # 1/[angstrom]
 ```
 
 # Define collision frequency model
@@ -170,8 +170,8 @@ plt.legend()
 ```
 
 ```{code-cell} ipython3
-plt.loglog(freq_data, elf_data[0], label="true: q1", color="C3", lw=3)
-plt.loglog(freq_data, elf_data[1], label="true: q2", color="C1", lw=3)
+plt.loglog(freq_data, elf_data[0], label="true: q1", color="C3", lw=2)
+plt.loglog(freq_data, elf_data[1], label="true: q2", color="C1", lw=2)
 plt.loglog(freq_data, elf_data[0], color="C3", lw=1)
 plt.loglog(freq_data, elf_data[1], color="C1", lw=1)
 opt_elf = elfmodel(freq_data / AtomicUnits.energy, optresult.x)
@@ -214,16 +214,14 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_twoangle"
-dataset = "relative residual"
+dataset = f"relative residual - wavenumbers = {wavenum}"
 ```
 
 ```{code-cell} ipython3
 runinfo = {
     "date" : datetime.today().strftime('%a %d %b %Y, %I:%M%p'),
-    "input data info" : f"""Data generated using Average Atom 
-         collisions [T-matrix cross sections, nonideal DOS, QOZ structure
-         factors, LB form, inelastic processes], from file {datafile}. Uses adaptive
-         Kramers-Kronig transform for imaginary part of collision freq.""",
+    "input data info" : f"""Data generated using collision frequency model fit
+        to average-atom data.""",
     "input data temperature [eV]" : teV,
     "input data density [1/angstrom^3]" : d_ang,
     "input data wavenumber [1/angstrom]" : wavenum,
@@ -237,7 +235,7 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 500
+numsamples = 5_000
 ```
 
 ```{code-cell} ipython3
@@ -382,12 +380,8 @@ plt.plot(freq_data, elf_data[1], c="k", label="true ELF: q2", lw=2, ls='-.')
 
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
-plt.xlim(0, 130)
+plt.xlim(0, 60)
 plt.legend()
-```
-
-```{code-cell} ipython3
-
 ```
 
 ```{code-cell} ipython3
