tddft inference nbs

--- a/notebooks/exploratory/7.0-twh-inference-TDDFT.md
+++ b/notebooks/exploratory/7.0-twh-inference-TDDFT.md
@@ -76,13 +76,13 @@ AAdata = np.loadtxt(AAdatafile, skiprows=9, usecols=[0, 9], unpack=True)
 dos_fn = lambda x : np.interp(x, np.sqrt(2 * AAdata[0] / AtomicUnits.energy), AAdata[1])
 
 # electron data
-electrons = ElectronGas(t, d, dos_fn, cp)
+electrons = ElectronGas(t, d)#, dos_fn, cp)
 
 # dielectric function
 dielectric = Mermin(electrons)
 
 # Wavenumber is independent of data -- can pick whatever we want to create our ELF data
-wavenum = 0.78 # 1/[angstrom]
+wavenum = 1.55 # 1/[angstrom]
 ```
 
 # Define collision frequency model
@@ -116,7 +116,7 @@ def elfmodel(freq, params):
 
 ```{code-cell} ipython3
 DFTdatafile = "../../data/external/Al_MD_1eV_DSF_more_qs.txt"
-dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 1], unpack=True)
+dftfreq, dftdsf = np.loadtxt(DFTdatafile, usecols=[0, 3], unpack=True)
 # create log frequency grid
 freq_grid = np.geomspace(1e-1, 1e3, 200) # [eV]
 # linear interpolate DSF data on the log grid and convert to atomic units
@@ -142,8 +142,9 @@ elf_full_data = (
 )
 
 # truncate range to focus only on peak of ELF
-percentage_of_peak = np.max(elf_full_data) * 0.25
-mask = (elf_full_data > percentage_of_peak)
+percentage_of_peak = 0.85
+threshold = (1 - percentage_of_peak) * np.max(elf_full_data)
+mask = (elf_full_data > threshold) & (freq_grid > 10)
 
 freq_data = freq_grid[mask]
 elf_data = elf_full_data[mask]
@@ -153,8 +154,8 @@ plt.plot(freq_data, elf_data, lw=2, c="black")
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
-plt.xlim(10, 30)
-plt.axhline(percentage_of_peak, ls="--", c="gray")
+plt.xlim(5, 45)
+plt.axhline(threshold, ls="--", c="gray")
 
 print(f"length of data = {freq_data.shape}")
 ```
@@ -179,9 +180,9 @@ def objective(params):
 initparams = [0.48647414, 0.06293753, 0.27164363, 8.66461154]
 
 # optimization results
-optresult = optimize.least_squares(residual, initparams, bounds=(1e-4, 49), max_nfev=150)
-# bounds = [(1e-2, 50), ] * 4
-# optresult = optimize.shgo(objective, bounds) 
+# optresult = optimize.least_squares(residual, initparams, bounds=(1e-2, 49), max_nfev=150)
+bounds = [(1e-2, 50), ] * 4
+optresult = optimize.dual_annealing(objective, bounds) 
 ```
 
 ```{code-cell} ipython3
@@ -227,9 +228,9 @@ Define a (log) posterior distribution that only depends on the parameters of the
 ```{code-cell} ipython3
 lik_cutoff = 0.05
 prior_lims = [
-    [1e-3, 5],
-    [1e-3, 5],
-    [1e-3, 10],
+    [1e-3, 50],
+    [1e-3, 50],
+    [1e-3, 50],
     [1e-3, 50]
 ]
 
@@ -251,7 +252,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft"
-dataset = f"{residualtype} residual - q = {wavenum}"
+dataset = f"{residualtype} residual - q = {wavenum} - {percentage_of_peak}% peak threshold - ideal electrons"
 ```
 
 ```{code-cell} ipython3
@@ -286,7 +287,7 @@ sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, d
 # Read in MCMC data
 
 ```{code-cell} ipython3
-# dataset = "rel residual - q = 1.55 - peak range"
+# dataset = "rel residual - q = 1.55"
 backend = emcee.backends.HDFBackend(samplesfile, name=dataset)
 flat_samples = flat_mcmc_samples(backend)
 
@@ -372,7 +373,7 @@ for ind in inds:
         "grey",
         alpha=0.1
     )
-    plt.loglog(
+    plt.semilogx(
         freq_data, 
         collisionfreq(freq_data / AtomicUnits.energy, sample).real, 
         "C1", 
@@ -381,7 +382,7 @@ for ind in inds:
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-#plt.ylim(0, 1)
+plt.ylim(0, 1)
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
@@ -427,10 +428,27 @@ for ind in inds:
 # plot data
 plt.plot(freq_grid, elf_full_data, c="k", label="true ELF", lw=2, ls='--')
 
-plt.xlim(10, 25)
+plt.xlim(5, 45)
 plt.ylabel("ELF [au]")
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.legend()
+```
+
+## Test sum rule
+
+```{code-cell} ipython3
+from scipy.integrate import quad
+sample = flat_samples[inds[0]]
+x = np.linspace(1e-6, 500, 3000)
+y = elfmodel(x, sample)
+elfsum = np.trapz(x * y, x)
+sumrule = np.pi / 2 * (4 * np.pi * d)
+print(f"integral = {elfsum}")
+print(f"sum rule = {sumrule}")
+```
+
+```{code-cell} ipython3
+electrons.chemicalpot
 ```
 
 ```{code-cell} ipython3
