--- a/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
+++ b/notebooks/exploratory/7.1-twh-inference-TDDFT-two-angle.md
@@ -146,9 +146,9 @@ elf_full_data = (
 )
 
 # truncate range to focus only on ELF peaks
-percentage_of_peak = np.max(elf_full_data) * 0.25
+percentage_of_peak = 0.75
 # mask for individual peaks
-peak_masks = (elf_full_data > percentage_of_peak) & (freq_grid > 10)
+peak_masks = (elf_full_data > np.max(elf_full_data) * (1 - percentage_of_peak)) & (freq_grid > 10)
 # mask for range encompassing both peaks
 mask_total_range = peak_masks | peak_masks[::-1]
 
@@ -270,7 +270,7 @@ We will use the results from the optimization to initialize the Markov chains.
 
 ```{code-cell} ipython3
 samplesfile = "../../data/mcmc/mcmc_tddft"
-dataset = f"relative, masked residual - q = {wavenum} - 25% max. peak - ext. param. range"
+dataset = f"relative residual - q = {wavenum} - mask ({percentage_of_peak}% of peak) - ext. param. range"
 ```
 
 ```{code-cell} ipython3
@@ -291,15 +291,26 @@ runinfo = {
 # sampler properties
 ndim = 4 # number of parameters
 numchains = 8
-numsamples = 100_000
+numsamples = 5_000
 ```
 
 ```{code-cell} ipython3
 # randomly initialize chains within the boundaries
-initial_state = optresult.x + 1e-2 * rng.random(size=(numchains, ndim))
+initial_state = optresult.x + 1e-4 * rng.random(size=(numchains, ndim))
 
 # uncomment to run and potentially overwrite data
-sampler = inference_loop(initial_state, logposterior, numsamples, samplesfile, dataset, runinfo, overwrite=False)
+sampler = inference_loop(
+    initial_state,
+    logposterior,
+    numsamples,
+    samplesfile,
+    dataset,
+    runinfo,
+    overwrite=True,
+    moves=[
+        (emcee.moves.DEMove(), 1.0),
+    ]
+)
 ```
 
 # Read in MCMC data
@@ -400,7 +411,7 @@ for ind in inds:
 
 plt.xlabel(r"$\hbar\omega$ [eV]")
 plt.ylabel("collision freq [au]")
-plt.ylim(-0.03, 0.6)
+# plt.ylim(-0.03, 0.6)
 # plt.savefig("../../reports/figures/mcmc_modeldata_collisionsamples")
 ```
 
